Fix homepage spacing: My work (90px above, 50px below title), Journal list (50px below title)

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -100,7 +100,7 @@
   align-items: center;
   gap: 10px;
   width: 100%;
-  margin-top: 48px;
+  margin-top: 30px;
   align-self: center;
   margin-bottom: 100px;
 }
